--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .grid-wrapper {
   display: grid;
-  height: 82vh;
-  grid-template-columns: 20% 1fr;
+  height: 100vh;
+  grid-template-columns: 200px 1fr;
   grid-template-rows: auto 1fr auto;
   grid-template-areas:
     "header header"
